# nmpde-projects

./: .gitignore  CMakeLists.txt  cmake-common.cmake
mesh/: mesh-square.geo
src/: Current.cpp  Current.hpp  TODO.txt  exercise-01.cpp
